--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,15 @@
     background-color: green;
 }
 
+h1 {
+   font-family:  'Acme', sans-serif;
+}
+
+.parrafobienvenida{
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
+    font-size: 2 em;
+}
+
 /* Estilos MAIN */
 .main{
     background-color: rgb(2, 78, 91);
